# flask_crud

./: cheatsheet.sql  pyproject.toml
website/: __init__.py  auth.py  models.py  views.py
website/templates/: base.html  base_bak.html
